# dungeons-and-dragons-agent-proj

./: .env.example  .gitignore  AGENTS.md  Agent工程手册final_version.md  LICENSE  Makefile  README.md  VERSION  agent-engineering-handbook.md  claude_template.md  convert_epub.py  docker-compose.yml  端侧用户画像系统：简洁可拓展落地方案.md  端侧轻量级用户画像系统落地方案.md  题集.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
asset/sao/: SAO刀剑神域_Progressive_8(1).txt  [台版][川原砾]][刀剑神域][进击篇-Progressive][01](1).txt  [台版][川原砾]][刀剑神域][进击篇-Progressive][02](1).txt  [台版][川原砾]][刀剑神域][进击篇-Progressive][03](1).txt  [台版][川原砾]][刀剑神域][进击篇-Progressive][04](1).txt  [台版][川原砾]][刀剑神域][进击篇-Progressive][05](1).txt  (+2 more)
data/: dnd-game-system.md  dnd-novel-chunking.md  dnd-world-setting.md
docs/: project-config.md
engineering/: AI协作规范.md  Agent工程手册final_version.md  README.md  claude_quality_check_prompt.md  quality_check_cpp.md  quality_check_go.md  quality_check_java.md  quality_check_python.md  quality_check_rust.md  quality_check_typescript.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
gameserver/: CPU_ONLY_INSTALL.md  Dockerfile  main.py  pyproject.toml  uv.ci.toml  uv.toml
gameserver/config/: config.yaml
gameserver/scripts/: ingest_novels.py  init_db.sql  init_demo.sh  manage_game_data.py  novel_parser.py  text_chunker.py  vectorize_entities.py  verify_vectordb.py
gameserver/scripts/migrations/: v0500_schema.sql
gameserver/src/gameserver/: main.py
gameserver/src/gameserver/config/: settings.py
gameserver/src/gameserver/db/: __init__.py  chromadb_client.py  player_repo.py  postgres.py  redis_client.py  state_service.py
gameserver/src/gameserver/game/: __init__.py  action_executor.py  combat_state.py  context_builder.py  npc_relationship_service.py  quest_service.py  scene_classifier.py  tools.py  world_flags_service.py
gameserver/src/gameserver/grpc_service/: game_servicer.py
gameserver/src/gameserver/llm/: anthropic_provider.py  base.py  circuit_breaker.py  factory.py  openai_provider.py
gameserver/src/gameserver/service/: chat_service.py  request_metrics.py
gameserver/tests/: conftest.py  test_action_executor.py  test_combat_state.py  test_context_builder.py  test_npc_relationship.py  test_postgres.py  test_quest_service.py  test_redis_client.py  test_request_metrics.py  test_scene_classifier.py  test_state_service.py  test_world_flags.py
gateway/: .dockerignore  Dockerfile  coverage.html  go.mod  go.sum
scripts/: clean-branches.sh  collect_metrics.sh  demo_setup.sh  init-data.sh  start.sh  stop.sh  update-pr-body.sh
spec/: coding.md  design.md
(+43 files in other folders)
