[project]
name = "gameserver"
version = "0.1.0"
description = "DND Game Server - gRPC service with multi-model LLM support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.0",
    "chromadb>=1.0.0",
    "grpcio>=1.80.0",
    "openai>=2.30.0",  # LLM + Embedding API
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.89.0",  # Claude LLM support (optional)
]

[project.scripts]
gameserver = "gameserver.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "fakeredis>=2.26.0",
    "grpcio-tools>=1.80.0",  # Only needed for proto generation
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
